# collada-engine

./: README.md  finalproject.pptx
engine/: .gitignore
engine/src/: CMakeLists.txt  main.cpp  src.pro
engine/src/res/: res.qrc
engine/src/res/shader/: shader.frag  shader.vert
engine/src/ui/: aboutdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h
engine/src/world/: camera.cpp  camera.h  colladaimporter.cpp  colladaimporter.h  controller.cpp  controller.h  node.cpp  node.h  scene.cpp  scene.h  world.cpp  world.h  worldobject.cpp  worldobject.h
engine/src/world/effect/: color.cpp  color.h  effect.cpp  effect.h  image.cpp  image.h  material.cpp  material.h  texture.cpp  texture.h
engine/src/world/geometry/: geometry.cpp  geometry.h  mesh.cpp  mesh.h
engine/src/world/light/: light.cpp  light.h  pointlight.cpp  pointlight.h
models/: cube5.blend  cube5.dae
